Fixed scrollbar

--- a/Frontend/Stylesheet/Components/_carousel.scss
+++ b/Frontend/Stylesheet/Components/_carousel.scss
@@ -56,7 +56,7 @@
     overflow: hidden;
     width: 100%;
     max-width: 200px;
-    z-index: 2;
+    z-index: 10;
     position: absolute;        
     left: 50%;
     transform: translateX(-50%);
