--- a/Frontend/Stylesheet/Pages/index.css
+++ b/Frontend/Stylesheet/Pages/index.css
@@ -845,7 +845,7 @@ main .performers-section .swiper-scrollbar {
   overflow: hidden;
   width: 100%;
   max-width: 200px;
-  z-index: 2;
+  z-index: 10;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
